--- a/Report.Rmd
+++ b/Report.Rmd
@@ -1,6 +1,5 @@
 ---
 title: "Case Study Report"
-author: "Alicia Gong", "Olivia Fan", "Jake Heller", "Annie Do"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
   pdf_document: default
@@ -251,9 +250,9 @@ rsqdf
 
 The final equations are:
 
-$\hat{R\_moment\_1}=0.122 \times Re\_categoryLow+0.001 \times Re\_categoryMedium -0.052 \times Re\_categoryLow * Fr\_transformed +0.001 \times Re\_categoryMedium * Fr\_transformed + 0.028 \times St * Re\_categoryLow+0.001 \times St*Re\_categoryMedium$
+$\widehat{R\_moment\_1}=0.122 \times \widehat{Re\_categoryLow} +0.001 \times \widehat{Re\_categoryMedium} -0.052 \times \widehat{Re\_categoryLow} * \widehat{Fr\_transformed} +0.001 \times \widehat{Re\_categoryMedium} * \widehat{Fr\_transformed} + 0.028 \times \hat{St} * \widehat{Re\_categoryLow}+0.001 \times \hat{St} * \widehat{Re\_categoryMedium} + \epsilon$
 
-$\hat{C\_moment\_2}=\exp(-5.423+0.295 \times St +3.824\times Re\_categoryLow+ 1.130\times  Re\_categoryMedium-0.229 \times Fr\_categoryLow-0.067 \times Fr\_categoryMedium +6.886 \times Re\_categoryLow*Fr\_categoryLow+2.175 \times Re\_categoryMedium*Fr\_categoryLow+0.269 \times Re\_categoryLow*Fr\_categoryMedium+0.684 \times St*Re\_categoryLow+0.651 \times St*Re\_categoryMedium)$
+$\widehat{C\_moment\_2}=\exp(-5.423+0.295 \times St +3.824\times Re\_categoryLow+ 1.130\times  Re\_categoryMedium-0.229 \times \widehat{Fr\_categoryLow} -0.067 \times Fr\_categoryMedium +6.886 \times Re\_categoryLow*Fr\_categoryLow+2.175 \times Re\_categoryMedium*Fr\_categoryLow+0.269 \times Re\_categoryLow*Fr\_categoryMedium+0.684 \times St*Re\_categoryLow+0.651 \times \hat{St}*\widehat{Re\_categoryMedium} + \epsilon)$
 
 $\hat{C\_moment\_3}=\exp(-2.474+0.315 \times St +2.874\times Re\_categoryLow+ 0.573\times  Re\_categoryMedium-0.289 \times Fr\_categoryLow-0.077 \times Fr\_categoryMedium +13.060 \times Re\_categoryLow*Fr\_categoryLow+4.303 \times Re\_categoryMedium*Fr\_categoryLow+0.307 \times Re\_categoryLow*Fr\_categoryMedium+1.116 \times St*Re\_categoryLow+1.002 \times St*Re\_categoryMedium)$
 
